--- a/herewego.html
+++ b/herewego.html
@@ -8,7 +8,7 @@
 <body>
     I remember seeing you for the first time.
     <br>
-    Zach said you were super cool and that was an understatment
+    Zach said you were super cool and that was an understatement
     <br>
     I never connected with someone so quick
     <br>
